--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,21 @@ description = "Solana transaction tool"
 
 [dependencies]
 anyhow = "1.0.86"
-cached = { version = "0.51.3", features = ["async", "disk_store"] }
+astrolib = "0.1.3"
 clap = { version = "4.5.7", features = ["derive"] }
-futures = "0.3.30"
+env_logger = "0.11.3"
 itertools = "0.13.0"
 jsonrpsee = { version = "0.23.1", features = ["http-client", "server", "macros"] }
+log = "0.4.21"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = "1.37.0"
+
+[lib]
+name = "sune"
+crate-type = ["lib"]
+
+[[bin]]
+name = "sune"
+path = "bin/main.rs"
